<resources>
    <string name="app_name">grocery_app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Text">Beauty</string>
    <string name="Headings">My Grocery</string>
    <string name="Sub_headings">Categories</string>
    <string name="Total">Total</string>
    <string name="Dollars">$84.68</string>
    <string name="Basket">Basket</string>
</resources>